--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react": "18.2.0",
     "react-i18next": "^15.0.1",
     "react-native": "0.74.5",
+    "react-native-draggable-flatlist": "^4.0.1",
     "react-native-gesture-handler": "~2.16.1",
     "react-native-get-random-values": "^1.11.0",
     "react-native-localize": "^3.2.1",
@@ -27,6 +28,7 @@
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.8.0",
+    "react-native-swipe-list-view": "^3.2.9",
     "react-native-vector-icons": "^10.1.0",
     "react-redux": "^9.1.2",
     "reselect": "^5.1.1",
